# cydec

./: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  TESTING.md  run_benches.sh  run_benches_quick.sh
.cargo-husky/hooks/: pre-commit
.github/workflows/: release-plz.yml
.husky/hooks/: commit-msg
benches/: compression_benchmarks.rs  heavy_load.rs  realistic_data.rs
src/: floating_codec.rs  integer_codec.rs  lib.rs
tests/: correctness_tests.rs  edge_cases.rs  integration_tests.rs  property_tests.rs
