[package]
name = "cydec"
version = "0.1.0"
edition = "2024"
authors = ["https://github.com/tia-lab"]
license = "MIT OR Apache-2.0"

[dependencies]
integer-encoding = "3"
rayon = "1.7"
rand = "0.8"
anyhow = "1.0"
lz4_flex = { version = "0.11", features = ["std"] }

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"] }
