[package]
name = "cydec"
version = "0.0.3"
edition = "2024"
authors = ["https://github.com/tia-lab"]
license = "MIT OR Apache-2.0"
description = "High-performance compression library for numerical time series data using delta encoding, zigzag encoding, and LZ4"
repository = "https://github.com/tia-lab/cydec"
homepage = "https://github.com/tia-lab/cydec"
documentation = "https://docs.rs/cydec"
keywords = ["compression", "lz4", "timeseries", "numerical", "delta-encoding"]
categories = ["compression", "encoding", "algorithms"]
readme = "README.md"

[dependencies]
integer-encoding = "3"
rayon = "1.7"
rand = "0.8"
anyhow = "1.0"
lz4_flex = { version = "0.11", features = ["std"] }

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[[bench]]
name = "compression_benchmarks"
harness = false

[[bench]]
name = "heavy_load"
harness = false

[[bench]]
name = "realistic_data"
harness = false
